[package]
name = "booru-db-danbooru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
booru-db = { git = "https://github.com/TheBobBobs/booru-db.git" }
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.29"
serde = "1.0"
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = [ "chrono", "postgres", "runtime-tokio" ] }
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
